<resources>
    <string name="app_name">清账</string>
    <string name="splash_count_time">3s跳过</string>
    <string name="home_me">我的</string>
    <string name="login_right_now">立即登录</string>
    <string name="login_tips">登录之后，数据保存在云端，永不丢失</string>
    <string name="home_mine_settings">设置</string>
    <string name="title_activity_login">账号登录</string>
    <string name="account_login">账号登录</string>
    <string name="login">登录</string>
    <string name="login_password">登录密码</string>
    <string name="login_phone_number">手机号</string>
    <string name="forgot_password">忘记密码</string>
    <string name="register">注册</string>
    <string name="write_down_setting">记账设置</string>
    <string name="apply_setting">应用设置</string>
    <string name="setting_help">帮助</string>
    <string name="month_budget">月预算</string>
    <string name="month_start_day">月开始日</string>
    <string name="check_update">检查更新</string>
    <string name="set_budget">设置预算</string>
    <string name="set_budget_tip1">每月支出预算</string>
    <string name="set_budget_tip2">输入每月支出预算，管理支出</string>
    <string name="question_feed_back">问题反馈</string>
    <string name="question_feed_back_hint">输入您的意见反馈、举报内容和问题申诉等（限10-140个字）</string>
    <string name="commit_feedback">提交反馈</string>
    <string name="update_info">修改资料</string>
    <string name="username">名字</string>
    <string name="userphone_is_not_blank">用户手机号不能为空</string>
    <string name="user_password_is_not_blank">用户密码不能为空</string>
    <string name="login_success">登录成功</string>
    <string name="about">关于</string>
    <string name="pay_for_support">爱的鼓励</string>
    <string name="clear_data_cache">清除缓存</string>
    <string name="keep_accounts_attention">记账提醒</string>
    <string name="num_one">1</string>
    <string name="num_two">2</string>
    <string name="num_three">3</string>
    <string name="num_four">4</string>
    <string name="num_five">5</string>
    <string name="num_six">6</string>
    <string name="num_seven">7</string>
    <string name="num_eight">8</string>
    <string name="num_nine">9</string>
    <string name="num_zero">0</string>
    <string name="num_point">.</string>
    <string name="num_delete">删除</string>
    <string name="num_confirm">确定</string>
    <string name="num_clear">清零</string>
    <string name="home_mine_bottom_button">我的</string>
    <string name="home_account_bottom_button">账户</string>
    <string name="home_report_forms_bottom_button">报表</string>
    <string name="home_keep_account_bottom_button">记账</string>
    <string name="expend">支出</string>
    <string name="income">收入</string>
    <string name="money_not_blank">金额不能为零</string>
    <string name="unsupport_memo">暂不支持备注，程序员哥哥正在加紧开发中~</string>
    <string name="this_week_budget">本月预算</string>
    <string name="_0_00">0.00</string>
    <string name="this_week_expend">本月支出</string>
    <string name="this_week_income">本月收入</string>
    <string name="home_keep_an_account_tips">轻松记一笔，财米油盐醋！</string>
    <string name="keep_an_account">记一笔</string>
    <string name="install">安装</string>
    <string name="version_upgrade_title">标题</string>
    <string name="version_upgrade_subtitle">是否升级到 1.2.0 版本?</string>
    <string name="version_upgrade_install_tips">本次的更新为您带来了以下的功能</string>
    <string name="income_type_manager">收入类别管理</string>
    <string name="expend_type_manager">支出类别管理</string>
    <string name="income_type">收入类别</string>
    <string name="expend_type">支出类别</string>
    <string name="notification_help">通知和帮助</string>
    <string name="my_welfare">我的福利</string>
    <string name="keep_account_notification">记账提醒</string>
    <string name="keep_an_account_notification">记账提醒</string>
    <string name="notification_time">通知时间</string>
    <string name="login_error">登录失败</string>
    <string name="user_phone">手机号码</string>
    <string name="head_img">头像</string>
    <string name="user_gender">性别</string>
    <string name="account">账户</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="type_manager">类型管理</string>
    <string name="add_type">添加类别</string>
    <string name="add_expend_type">添加支出类别</string>
    <string name="add_income_type">添加收支类别</string>
    <string name="clear_data_cache_tips">是否要清除本地缓存数据？</string>
    <string name="confirm_text">确定</string>
    <string name="cancel_text">取消</string>
    <string name="fund_flow">流水</string>
    <string name="report_froms_textview">报表</string>
    <string name="more">更多</string>
    <string name="add_account">添加账户</string>
    <string name="account_amount">账户金额</string>
    <string name="account_name">账户名称</string>
    <string name="account_desc">账户描述</string>
    <string name="account_icon">账户图标</string>
    <string name="change_income_expend">切换</string>
    <string name="add">添加</string>
    <string name="default_account_book">默认账簿</string>
    <string name="account_total_balance">账户结余</string>
    <string name="today">今天</string>
    <string name="month">本月</string>
    <string name="input_comments_hint">请输入备注</string>
    <string name="choose_time">选择时间</string>
    <string name="comment">填写备注</string>
    <string name="unsupport_comment">暂不支持备注</string>
    <string name="choose_account">选择账户</string>


</resources>
