<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/toolbarColor"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textColor="@android:color/black"
            android:textSize="@dimen/xx_normal_size"
            android:layout_gravity="center_horizontal"
            android:text="@string/set_budget_tip1"
            android:layout_marginTop="?actionBarSize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <EditText
            android:background="@drawable/edittext_rect_border"
            android:id="@+id/show_budget_money"
            android:layout_marginTop="@dimen/activity_margin"
            style="@style/ExpendIncomeShowMoneyStyle"
            android:gravity="center"
            android:textColor="@android:color/black"
            android:layout_gravity="center_horizontal"
            android:layout_width="180dp"
            android:layout_height="?actionBarSize"/>
        <TextView
            android:layout_marginTop="@dimen/activity_margin"
            android:layout_gravity="center_horizontal"
            android:text="@string/set_budget_tip2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>




    <LinearLayout
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            android:layout_weight="3"
            android:layout_width="0dp"
            android:layout_height="match_parent">
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="@dimen/number_key_height">
                <TextView
                    android:id="@+id/number_key_budget_one"
                    style="@style/NumKeyStyle"
                    android:text="@string/num_one"/>
                <View
                    android:layout_width="@dimen/divider_line_height"
                    android:layout_height="match_parent"
                    android:background="@color/number_key_divider_color"/>
                <TextView
                    android:id="@+id/number_key_budget_two"
                    style="@style/NumKeyStyle"
                    android:text="@string/num_two"/>
                <View
                    android:layout_width="@dimen/divider_line_height"
                    android:layout_height="match_parent"
                    android:background="@color/number_key_divider_color"/>
                <TextView
                    android:id="@+id/number_key_budget_three"
                    android:text="@string/num_three"
                    style="@style/NumKeyStyle"/>
                <View
                    android:layout_width="@dimen/divider_line_height"
                    android:layout_height="match_parent"
                    android:background="@color/number_key_divider_color"/>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/divider_line_height"
                android:background="@color/number_key_divider_color"/>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="@dimen/number_key_height">
                <TextView
                    android:id="@+id/number_key_budget_four"
                    android:text="@string/num_four"
                    style="@style/NumKeyStyle"/>
                <View
                    android:layout_width="@dimen/divider_line_height"
                    android:layout_height="match_parent"
                    android:background="@color/number_key_divider_color"/>
                <TextView
                    android:id="@+id/number_key_budget_five"
                    android:text="@string/num_five"
                    style="@style/NumKeyStyle"/>
                <View
                    android:layout_width="@dimen/divider_line_height"
                    android:layout_height="match_parent"
                    android:background="@color/number_key_divider_color"/>
                <TextView
                    android:id="@+id/number_key_budget_six"
                    android:text="@string/num_six"
                    style="@style/NumKeyStyle"/>
                <View
                    android:layout_width="@dimen/divider_line_height"
                    android:layout_height="match_parent"
                    android:background="@color/number_key_divider_color"/>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/divider_line_height"
                android:background="@color/number_key_divider_color"/>


            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="@dimen/number_key_height">
                <TextView
                    android:id="@+id/number_key_budget_seven"
                    android:text="@string/num_seven"
                    style="@style/NumKeyStyle"/>
                <View
                    android:layout_width="@dimen/divider_line_height"
                    android:layout_height="match_parent"
                    android:background="@color/number_key_divider_color"/>
                <TextView
                    android:id="@+id/number_key_budget_eight"
                    android:text="@string/num_eight"
                    style="@style/NumKeyStyle"/>
                <View
                    android:layout_width="@dimen/divider_line_height"
                    android:layout_height="match_parent"
                    android:background="@color/number_key_divider_color"/>
                <TextView
                    android:id="@+id/number_key_budget_nine"
                    android:text="@string/num_nine"
                    style="@style/NumKeyStyle"/>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/divider_line_height"
                android:background="@color/number_key_divider_color"/>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="@dimen/number_key_height">
                <TextView
                    android:id="@+id/number_key_budget_clear"
                    android:text="@string/num_clear"
                    style="@style/NumKeyStyle"/>
                <View
                    android:layout_width="@dimen/divider_line_height"
                    android:layout_height="match_parent"
                    android:background="@color/number_key_divider_color"/>
                <TextView
                    android:id="@+id/number_key_budget_zero"
                    android:text="@string/num_zero"
                    style="@style/NumKeyStyle"/>
                <View
                    android:layout_width="@dimen/divider_line_height"
                    android:layout_height="match_parent"
                    android:background="@color/number_key_divider_color"/>
                <TextView
                    android:id="@+id/number_key_budget_point"
                    android:text="@string/num_point"
                    style="@style/NumKeyStyle"/>
            </LinearLayout>

        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/number_key_budget_delete"
                android:text="@string/num_delete"
                style="@style/NumDeleteConfirmStyle"
                tools:ignore="NestedWeights"/>
            <TextView
                android:id="@+id/number_key_budget_confirm"
                android:textSize="@dimen/xx_normal_size"
                android:background="@drawable/number_key_confirm_selector"
                android:text="@string/num_confirm"
                style="@style/NumDeleteConfirmStyle"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
