<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:background="@color/toolbarColor"
                android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linear_layout_set_price"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:background="@color/toolbarColor"
        android:paddingLeft="@dimen/activity_margin"
        android:paddingStart="@dimen/activity_margin"
        android:paddingEnd="@dimen/activity_margin"
        android:paddingRight="@dimen/activity_margin"
        android:layout_height="?actionBarSize">
        <ImageView
            android:id="@+id/expend_pic"
            android:layout_gravity="center_vertical"
            android:layout_width="@dimen/expend_income_type_pic_size"
            android:layout_height="@dimen/expend_income_type_pic_size"/>
        <TextView
            android:id="@+id/expend_title"
            android:textSize="@dimen/x_normal_size"
            android:paddingLeft="@dimen/activity_margin"
            android:paddingStart="@dimen/activity_margin"
            android:paddingEnd="@dimen/activity_margin"
            android:paddingRight="@dimen/activity_margin"
            android:textColor="#424242"
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/keep_an_account_show_money"
            android:textColor="@color/toolbarTextColor"
            style="@style/ExpendIncomeShowMoneyStyle"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider_line_height"
        android:background="@color/lineDividerColor"/>
    <android.support.v7.widget.RecyclerView
        android:id="@+id/keep_an_account_expend_type_recycleview"
        android:background="#eeeeee"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider_line_height"
        android:background="@color/divider_line_color"/>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:background="@color/toolbarColor"
        android:paddingStart="@dimen/activity_margin"
        android:paddingEnd="@dimen/activity_margin"
        android:layout_height="40dp">
        <TextView
            android:id="@+id/expend_type"
            android:layout_gravity="center_vertical"
            android:background="@drawable/edittext_rect_border"
            android:paddingTop="@dimen/image_text_margin"
            android:paddingBottom="@dimen/image_text_margin"
            android:text="微信支付"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/expend_date"
            android:gravity="center"
            android:layout_gravity="center_vertical"
            android:background="@drawable/edittext_rect_border"
            android:paddingTop="@dimen/image_text_margin"
            android:paddingBottom="@dimen/image_text_margin"
            android:layout_marginEnd="@dimen/activity_margin"
            android:layout_marginStart="@dimen/activity_margin"
            android:text="09月22日"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/expend_memo"
            android:gravity="center"
            android:layout_gravity="center_vertical"
            android:background="@drawable/edittext_rect_border"
            android:paddingTop="@dimen/image_text_margin"
            android:paddingBottom="@dimen/image_text_margin"
            android:text="备注一下"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            android:layout_weight="3"
            android:layout_width="0dp"
            android:layout_height="match_parent">
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="@dimen/number_key_height">
                <TextView
                    android:id="@+id/number_key_one"
                    style="@style/NumKeyStyle"
                    android:text="@string/num_one"/>
                <View
                    android:layout_width="@dimen/divider_line_height"
                    android:layout_height="match_parent"
                    android:background="@color/number_key_divider_color"/>
                <TextView
                    android:id="@+id/number_key_two"
                    style="@style/NumKeyStyle"
                    android:text="@string/num_two"/>
                <View
                    android:layout_width="@dimen/divider_line_height"
                    android:layout_height="match_parent"
                    android:background="@color/number_key_divider_color"/>
                <TextView
                    android:id="@+id/number_key_three"
                    android:text="@string/num_three"
                    style="@style/NumKeyStyle"/>
                <View
                    android:layout_width="@dimen/divider_line_height"
                    android:layout_height="match_parent"
                    android:background="@color/number_key_divider_color"/>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/divider_line_height"
                android:background="@color/number_key_divider_color"/>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="@dimen/number_key_height">
                <TextView
                    android:id="@+id/number_key_four"
                    android:text="@string/num_four"
                    style="@style/NumKeyStyle"/>
                <View
                    android:layout_width="@dimen/divider_line_height"
                    android:layout_height="match_parent"
                    android:background="@color/number_key_divider_color"/>
                <TextView
                    android:id="@+id/number_key_five"
                    android:text="@string/num_five"
                    style="@style/NumKeyStyle"/>
                <View
                    android:layout_width="@dimen/divider_line_height"
                    android:layout_height="match_parent"
                    android:background="@color/number_key_divider_color"/>
                <TextView
                    android:id="@+id/number_key_six"
                    android:text="@string/num_six"
                    style="@style/NumKeyStyle"/>
                <View
                    android:layout_width="@dimen/divider_line_height"
                    android:layout_height="match_parent"
                    android:background="@color/number_key_divider_color"/>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/divider_line_height"
                android:background="@color/number_key_divider_color"/>


            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="@dimen/number_key_height">
                <TextView
                    android:id="@+id/number_key_seven"
                    android:text="@string/num_seven"
                    style="@style/NumKeyStyle"/>
                <View
                    android:layout_width="@dimen/divider_line_height"
                    android:layout_height="match_parent"
                    android:background="@color/number_key_divider_color"/>
                <TextView
                    android:id="@+id/number_key_eight"
                    android:text="@string/num_eight"
                    style="@style/NumKeyStyle"/>
                <View
                    android:layout_width="@dimen/divider_line_height"
                    android:layout_height="match_parent"
                    android:background="@color/number_key_divider_color"/>
                <TextView
                    android:id="@+id/number_key_nine"
                    android:text="@string/num_nine"
                    style="@style/NumKeyStyle"/>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/divider_line_height"
                android:background="@color/number_key_divider_color"/>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="@dimen/number_key_height">
                <TextView
                    android:id="@+id/number_key_clear"
                    android:text="@string/num_clear"
                    android:textSize="@dimen/xx_normal_size"
                    style="@style/NumKeyStyle"/>
                <View
                    android:layout_width="@dimen/divider_line_height"
                    android:layout_height="match_parent"
                    android:background="@color/number_key_divider_color"/>
                <TextView
                    android:id="@+id/number_key_zero"
                    android:text="@string/num_zero"
                    style="@style/NumKeyStyle"/>
                <View
                    android:layout_width="@dimen/divider_line_height"
                    android:layout_height="match_parent"
                    android:background="@color/number_key_divider_color"/>
                <TextView
                    android:id="@+id/number_key_point"
                    android:text="@string/num_point"
                    style="@style/NumKeyStyle"/>
            </LinearLayout>

        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/number_key_delete"
                android:text="@string/num_delete"
                android:textSize="@dimen/xx_normal_size"
                style="@style/NumDeleteConfirmStyle"
                tools:ignore="NestedWeights"/>
            <TextView
                android:id="@+id/number_key_confirm"
                android:textSize="@dimen/xx_normal_size"
                android:background="@drawable/number_key_confirm_selector"
                android:text="@string/num_confirm"
                style="@style/NumDeleteConfirmStyle"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>